<resources>
    <string name="app_name">POS Merchant</string>

    <!-- Sign In -->
    <string name="sign_in_hint_email">Email</string>
    <string name="sign_in_hint_password">Password</string>
    <string name="sign_in_forget_password">Forgot Your Password?</string>
    <string name="sign_in_dont_have_account">Don\'t have an account yet? Sign up</string>
    <string name="sign_in_sign_up">Sign up</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_button_loading">Loading…</string>
    <string name="sign_in_success">Sign in successfully.</string>
    <string name="sign_in_fingerprint">Fingerprint</string>

    <!-- Select Account -->
    <string name="select_account_title">Select account</string>
    <string name="select_account_sub_title">Accounts</string>

    <!-- Welcome -->
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_account_info">You are in the %s \naccount.</string>

    <!-- Receive -->
    <string name="receive_title">Receive</string>
    <string name="receive_next">Next</string>

    <!-- Topup -->
    <string name="topup_title">Top-up</string>
    <string name="topup_next">Next</string>

    <!-- Token Spinner -->
    <string name="token_spinner_empty_list">Empty</string>
    <string name="token_spinner_fetch_error">Can\'t load tokens</string>

    <!-- Scan -->
    <!-- e.g. 380.00 UXD -->
    <string name="scan_title">Scan</string>
    <string name="scan_title_payment">Scan to Receive</string>
    <string name="scan_title_topup">Scan to Top-up</string>
    <string name="scan_instruction">Align QR code here</string>

    <!-- Loading -->
    <string name="loading_waiting_confirmation">Waiting for the user to confirm...</string>
    <string name="loading_cancel">Cancel</string>

    <!-- Feedback -->
    <string name="feedback_success_payment_title">Payment successful</string>
    <string name="feedback_success_topup_title">Topup successful</string>
    <string name="feedback_fail_payment_title">Payment failed</string>
    <string name="feedback_fail_topup_title">Topup failed</string>
    <string name="feedback_customer_name">Customer: %s</string>
    <string name="feedback_customer_id">Customer ID: %s</string>
    <string name="feedback_canceled">The transaction consumption has been cancelled.</string>
    <string name="feedback_rejected">The transaction consumption has been rejected.</string>
    <!-- Passing a calendar instance to formatter -->
    <string name="feedback_date_time">%1$Tb %1$te, %1$tY %1$tI:%1$tM %1$Tp</string>
    <string name="feedback_done">Done</string>
    <string name="feedback_retry">Retry</string>
    <string name="feedback_icon_success" translatable="false"></string>
    <string name="feedback_icon_failed" translatable="false"></string>
    <string name="feedback_error_code">%s</string>
    <string name="feedback_error_code_unknown">Unknown</string>

    <!-- More -->
    <string name="more_title">More</string>
    <string name="more_account">Account</string>
    <string name="more_transaction">Transaction</string>
    <string name="more_setting_and_help">Settings &amp; Help</string>
    <string name="more_sign_out">Sign out</string>

    <!-- Account -->
    <string name="account_title">Account</string>

    <!-- Transaction List -->
    <string name="transaction_list_title">Transaction</string>
    <!-- e.g. Jenny K. [3856...092] -->
    <string name="transaction_list_info_name_id">%s</string>
    <string name="transaction_list_info_amount">%s %s</string>
    <string name="transaction_list_info_date_time">%1$tb %1$te, %1$tI:%1$tM %1$Tp</string>
    <string name="transaction_list_info_success">Success</string>
    <string name="transaction_list_info_failure">Failure</string>
    <string name="transaction_list_topup_info">Top-up %s %s to %s</string>
    <string name="transaction_list_receive_info">Receive %s %s from %s</string>
    <string name="transaction_list_empty_transaction">EMPTY TRANSACTION</string>

    <!-- Setting -->
    <string name="setting_title">Setting &amp; Help</string>
    <string name="setting_fingerprint">Fingerprint</string>
    <string name="setting_faq">FAQ</string>
    <string name="setting_term_of_use">Term of use</string>
    <string name="setting_privacy">Privacy</string>
    <string name="setting_version">Version</string>
    <string name="setting_info">Info</string>
    <string name="setting_endpoint">Endpoint</string>

    <!-- Numpad -->
    <string name="numpad_1">1</string>
    <string name="numpad_2">2</string>
    <string name="numpad_3">3</string>
    <string name="numpad_4">4</string>
    <string name="numpad_5">5</string>
    <string name="numpad_6">6</string>
    <string name="numpad_7">7</string>
    <string name="numpad_8">8</string>
    <string name="numpad_9">9</string>
    <string name="numpad_0">0</string>
    <string name="numpad_minus">-</string>
    <string name="numpad_plus">+</string>
    <string name="numpad_ac">AC</string>
    <string name="numpad_del">del</string>
    <string name="numpad_dot">.</string>
    <string name="numpad_equal">=</string>
    <string name="numpad_percent">%</string>

    <!-- Calculator helper text -->
    <string name="calculator_helper_reach_maximum">Reach maximum subunit</string>
    <string name="calculator_helper_exceed_maximum">Exceed maximum subunit</string>

    <!-- Menu -->
    <string name="main_menu_next">Next</string>
    <string name="menu_account_save">Save</string>

    <!-- Permission -->
    <string name="camera_permission_explain">Camera access is needed to scan the QR code.</string>
    <string name="permission_setting">Settings</string>

    <!-- setting_account -->
    <string name="setting_account_change_notification">You\'ve changed account to %s</string>

    <!-- setting_help -->
    <string name="setting_help_title">Settings &amp; Help</string>
    <string name="setting_help_faq">FAQ</string>
    <string name="setting_help_term_of_use">Term of use</string>
    <string name="setting_help_privacy">Privacy</string>
    <string name="setting_help_fingerprint">Fingerprint</string>
    <string name="setting_help_fingerprint_not_supported">Your device does not support fingerprint authentication.</string>
    <string name="setting_help_coming_soon">Coming soon…</string>
    <string name="setting_help_enter_password">Enter your password to confirm</string>
    <string name="setting_help_enable_finger_print_successfully">Enable fingerprint successfully.</string>
    <string name="setting_help_confirm">Confirm</string>

    <!-- Confirmation -->
    <string name="confirm_title">Confirm a transaction</string>
    <string name="confirm_transaction_type_receive">Receive</string>
    <string name="confirm_transaction_direction_from">From</string>
    <string name="confirm_transaction_type_top_up">Topup</string>
    <string name="confirm_transaction_direction_to">To</string>
    <string name="confirm_transaction_yes">Yes</string>
    <string name="confirm_transaction_no">No</string>

    <!-- Fingerprint -->
    <string name="dialog_fingerprint_title">Sign-in</string>
    <string name="dialog_fingerprint_subtitle">Sign-in to your merchant account</string>
    <string name="dialog_fingerprint_description">In order to use the Fingerprint sensor we need your authorization first.</string>
    <string name="dialog_fingerprint_status_normal">Touch the fingerprint sensor</string>
    <string name="dialog_fingerprint_error_try_again">Try again</string>
    <string name="dialog_fingerprint_error_too_many_attempt">Too many attempt. Try again later.</string>
    <string name="dialog_fingerprint_error_too_fast">Finger moving too fast. Please try again.</string>
    <string name="dialog_fingerprint_error_too_slow">Finger moving too slow. Please try again.</string>
    <string name="dialog_fingerprint_error_unable_to_process">Unable to process</string>
    <string name="dialog_fingerprint_btn_cancel">Cancel</string>
    <string name="dialog_fingerprint_option_not_enabled">Please enable fingerprint option before use.</string>
    <string name="dialog_fingerprint_unsupported">Your device does not support fingerprint authentication.</string>
    <string name="dialog_fingerprint_not_enrolled">You haven\'t enrolled the fingerprint on your device yet.</string>
</resources>
