<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bottom_navigation"
    app:startDestination="@id/receive">

    <fragment
        android:id="@+id/topup"
        android:name="network.omisego.omgmerchant.pages.authorized.main.topup.TopupFragment"
        android:label="@string/topup_title"
        tools:layout="@layout/fragment_topup" />
    <fragment
        android:id="@+id/receive"
        android:name="network.omisego.omgmerchant.pages.authorized.main.receive.ReceiveFragment"
        android:label="@string/receive_title"
        tools:layout="@layout/fragment_receive" />
    <fragment
        android:id="@+id/more"
        android:name="network.omisego.omgmerchant.pages.authorized.main.more.MoreFragment"
        android:label="@string/more_title"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/confirmFragment"
        android:name="network.omisego.omgmerchant.pages.authorized.confirm.ConfirmFragment"
        android:label="ConfirmFragment">

        <argument
            android:name="amount"
            android:defaultValue="0"
            app:argType="string" />
        <argument
            android:name="token"
            app:argType="co.omisego.omisego.model.Token" />
        <argument
            android:name="transaction_type"
            android:defaultValue="receive"
            app:argType="string" />

    </fragment>
    <fragment
        android:id="@+id/scan"
        android:name="network.omisego.omgmerchant.pages.authorized.scan.ScanFragment"
        android:label="ScanFragment">
        <action
            android:id="@+id/action_scanFragment_to_confirmFragment"
            app:destination="@id/confirmFragment" />
        <argument
            android:name="amount"
            android:defaultValue="0"
            app:argType="string" />
        <argument
            android:name="token"
            app:argType="co.omisego.omisego.model.Token" />
        <argument
            android:name="transaction_type"
            android:defaultValue="receive"
            app:argType="string" />
    </fragment>
    <action
        android:id="@+id/action_global_scanFragment"
        app:destination="@id/scan">
        <argument
            android:name="amount"
            android:defaultValue="0"
            app:argType="string" />
        <argument
            android:name="token"
            app:argType="co.omisego.omisego.model.Token" />
        <argument
            android:name="transaction_type"
            android:defaultValue="receive"
            app:argType="string" />
    </action>
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="network.omisego.omgmerchant.pages.authorized.feedback.FeedbackFragment"
        android:label="FeedbackFragment">
        <argument
            android:name="feedback"
            app:argType="network.omisego.omgmerchant.model.Feedback" />
    </fragment>
    <action
        android:id="@+id/action_global_feedbackFragment"
        app:destination="@id/feedbackFragment" />
</navigation>