<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="emailValidator"
            type="network.omisego.omgmerchant.utils.Validator" />

        <variable
            name="passwordValidator"
            type="network.omisego.omgmerchant.utils.Validator" />

        <variable
            name="viewmodel"
            type="network.omisego.omgmerchant.pages.signin.SignInViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:layout_editor_absoluteY="81dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/omisego_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/fragment_sign_in_padding_horizontal"
            android:layout_marginEnd="@dimen/fragment_sign_in_padding_horizontal"
            android:hint="@string/sign_in_hint_email"
            android:textColorHint="@color/color_gray_blue"
            app:hintTextAppearance="@style/OMGHintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:validator="@{emailValidator}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!viewmodel.liveLoading}"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:onTextChanged="@{(text, start, before, count) -> viewmodel.updateEmail(text) }"
                android:theme="@style/AppTheme.OMGEditText"
                app:backgroundTint="@color/colorWhiteWeak" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/fragment_sign_in_padding_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/fragment_sign_in_padding_horizontal"
            android:hint="@string/sign_in_hint_password"
            android:textColorHint="@color/color_gray_blue"
            app:hintTextAppearance="@style/OMGHintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:passwordToggleEnabled="true"
            app:validator="@{passwordValidator}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!viewmodel.liveLoading}"
                android:inputType="textPassword"
                android:maxLines="1"
                android:onTextChanged="@{(text, start, before, count) -> viewmodel.updatePassword(text) }"
                android:textColorHighlight="@color/colorBlue"
                android:theme="@style/AppTheme.OMGEditText"
                app:backgroundTint="@color/colorWhiteWeak" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_in_forget_password"
            android:textColor="@color/colorBlue"
            app:layout_constraintBottom_toTopOf="@+id/tvSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_in_dont_have_account"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/AppTheme.OMGButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/fragment_sign_in_padding_horizontal"
            android:layout_marginEnd="@dimen/fragment_sign_in_padding_horizontal"
            android:layout_marginBottom="@dimen/fragment_sign_in_margin_vertical"
            android:enabled="@{!viewmodel.liveLoading}"
            android:text="@{viewmodel.liveBtnText}"
            app:layout_constraintBottom_toTopOf="@+id/btnFingerprint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/sign_in_button" />

        <Button
            android:id="@+id/btnFingerprint"
            style="@style/AppTheme.OMGButtonOutline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_sign_in_padding_horizontal"
            android:layout_marginEnd="@dimen/fragment_sign_in_padding_horizontal"
            android:layout_marginBottom="@dimen/fragment_sign_in_margin_vertical"
            android:drawableEnd="@drawable/ic_fingerprint"
            android:drawableTint="@color/color_button_outline"
            android:enabled="@{!viewmodel.liveLoading}"
            android:gravity="center"
            android:onClick="@{() -> viewmodel.handleFingerprintClick()}"
            android:paddingStart="@dimen/btn_fingerprint_padding_start"
            android:paddingEnd="@dimen/btn_fingerprint_padding_end"
            android:text="@string/sign_in_fingerprint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>